@@ -35,6 +35,8 @@ namespace OpenRCT2::Ui
         utf8 _consoleHistory[CONSOLE_HISTORY_SIZE][CONSOLE_INPUT_SIZE];
         int32_t _consoleHistoryIndex = 0;
         int32_t _consoleHistoryCount = 0;
+        size_t _selectionStart = 0;
+        int32_t _caretScreenPosX = 0;
 
     public:
         InGameConsole();
@@ -53,7 +55,7 @@ namespace OpenRCT2::Ui
         void WriteLine(const std::string& s, uint32_t colourFormat) override;
 
         void Input(ConsoleInput input);
-        void RefreshCaret();
+        void RefreshCaret(size_t position = 0);
         void Scroll(int32_t linesToScroll);
 
         void Update();
